--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "css-loader": "^0.28.10",
     "eslint": "^4.18.2",
     "eslint-loader": "^2.0.0",
+    "file-loader": "^4.0.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.6",
     "jest": "^24.8.0",
     "style-loader": "^0.20.2",
